[metadata]
name = sphinxcontrib-pecanwsme
author = Doug Hellmann
author-email = doug.hellmann@dreamhost.com
summary = Extension to Sphinx for documenting APIs built with Pecan and WSME
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Documentation
keywords =
    documentation
    sphinx
home-page = https://github.com/dreamhost/sphinxcontrib-pecanwsme

[files]
packages = 
    sphinxcontrib
namespace_packages =
    sphinxcontrib
