[metadata]
name = sphinxcontrib-pecanwsme
summary = A Sphinx extension for documenting APIs built with Pecan and WSME
description_file = README.rst
author = Doug Hellmann
author_email = doug@doughellmann.com
url = https://github.com/sphinx-contrib/pecanwsme
project_urls =
    Bug Tracker = https://github.com/sphinx-contrib/pecanwsme/issues
    Source Code = https://github.com/sphinx-contrib/pecanwsme
python_requires = >=3.8
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Documentation
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
keywords =
    documentation
    sphinx

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib
